fixing what we think is race condition in build process

--- a/orion-ui/packages/orion-design/package.json
+++ b/orion-ui/packages/orion-design/package.json
@@ -8,8 +8,8 @@
         "orion"
     ],
     "scripts": {
-        "dev": "vite build --watch & npm run dev-components & npm run dev-models & npm run dev-services & npm run dev-utilities",
-        "build": "vue-tsc & vite build & npm run build-components & npm run build-models & npm run build-services & npm run build-utilities",
+        "dev": "vite build --watch && npm run dev-components && npm run dev-models && npm run dev-services && npm run dev-utilities",
+        "build": "vue-tsc && vite build && npm run build-components && npm run build-models && npm run build-services && npm run build-utilities",
         "build-components": "vite build --mode components",
         "build-models": "vite build --mode models",
         "build-services": "vite build --mode services",
