including type modules for our new package modules

--- a/orion-ui/packages/orion-design/tsconfig.json
+++ b/orion-ui/packages/orion-design/tsconfig.json
@@ -6,6 +6,7 @@
     ],
     "exclude": ["node_modules"],
     "compilerOptions": {
+        "declaration": true,
         "emitDeclarationOnly": true,
         "outFile": "dist/index.d.ts",
     }
