Add kubernetes manifest commands

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -13,6 +13,7 @@ include requirements.txt
 include requirements-dev.txt
 include src/prefect/_version.py
 include src/prefect/logging/logging.yml
+include src/prefect/cli/templates/*.yaml
 
 # Package files and data
 graft src/prefect/orion/ui
