--- a/src/prefect/logging/logging.yml
+++ b/src/prefect/logging/logging.yml
@@ -79,6 +79,19 @@ loggers:
         handlers: [orion, console_task_runs]
         propagate: no
 
+    prefect.orion:
+        level: "{{server_level}}"
+
+    uvicorn:
+        level: "{{server_level}}"
+        handlers: [console]
+        propagate: no
+
+    fastapi:
+        level: "{{server_level}}"
+        handlers: [console]
+        propagate: no
+
     root:
         level: INFO
         handlers: [console]
