Include `dev` requirements in test images
Otherwise, the pickle5 backport is not installed in test containers

--- a/.github/workflows/python_tests.yaml
+++ b/.github/workflows/python_tests.yaml
@@ -30,6 +30,7 @@ jobs:
           context: .
           build-args:
             PYTHON_VERSION=${{ matrix.python-version }}
+            PREFECT_EXTRAS=[dev]
           tags: prefecthq/prefect:dev-python${{ matrix.python-version }}
           outputs: type=docker,dest=/tmp/image.tar
 
