--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -324,7 +324,8 @@ jobs:
           name: Build image
           command: |
             set -u
-            docker build \
+            docker buildx create --use
+            docker buildx build --platform=linux/amd64,linux/arm64 \
               --build-arg GIT_SHA=$CIRCLE_SHA1 \
               --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') \
               --build-arg PREFECT_VERSION=$CIRCLE_TAG \
@@ -390,7 +391,8 @@ jobs:
           name: Build image
           command: |
             set -u
-            docker build \
+            docker buildx create --use
+            docker buildx build --platform=linux/amd64,linux/arm64 \
               --build-arg GIT_SHA=$CIRCLE_SHA1 \
               --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') \
               --build-arg PREFECT_VERSION=$CIRCLE_SHA1 \
@@ -438,7 +440,8 @@ jobs:
           name: Build core image
           command: |
             set -u
-            docker build \
+            docker buildx create --use
+            docker buildx build --platform=linux/amd64,linux/arm64 \
               --build-arg GIT_SHA=$CIRCLE_SHA1 \
               --build-arg BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ') \
               --build-arg PREFECT_VERSION=$CIRCLE_TAG \
