--- a/.github/workflows/static_analysis.yaml
+++ b/.github/workflows/static_analysis.yaml
@@ -51,7 +51,7 @@ jobs:
       - name: Install black
         run: |
           python -m pip install --upgrade pip
-          pip install $(grep black requirements-dev.txt)
+          pip install "$(grep black requirements-dev.txt)"
 
       - name: Run black check
         run: |
