--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,6 +15,12 @@ include src/prefect/_version.py
 include src/prefect/logging/logging.yml
 include src/prefect/cli/templates/*.yaml
 
+# Migrations
+include orion/database/alembic.ini
+include orion/database/migrations/*
+include orion/database/migrations/versions/*
+include orion/database/migrations/versions/*/*
+
 # Package files and data
 graft src/prefect/orion/ui
 graft src/prefect/orion/api/static
