--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,7 +76,7 @@ nav:
         - Flows: concepts/flows.md
         - Tasks: concepts/tasks.md
         - States: concepts/states.md
-        - Orchestration Rules: concepts/orchestration.md
+        - Orchestration: concepts/orchestration.md
         - Task Runners: concepts/task-runners.md
         - Deployments: concepts/deployments.md
         - Flow Runners: concepts/flow-runners.md
