Fix handling for the root logger

--- a/src/prefect/logging/logging.yml
+++ b/src/prefect/logging/logging.yml
@@ -95,9 +95,9 @@ loggers:
         handlers: [console]
         propagate: no
 
-    # The root logger: any logger without propagation disabled sends to here as well
-    root:
-        # By default, we display warning level logs from any library in the console
-        # to match Python's default behavior but format logs nicely
-        level: WARNING
-        handlers: [console]
+# The root logger: any logger without propagation disabled sends to here as well
+root:
+    # By default, we display warning level logs from any library in the console
+    # to match Python's default behavior while formatting logs nicely
+    level: WARNING
+    handlers: [console]
