--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ docker >= 4.0
 fastapi >= 0.66
 fsspec >= 2021.7.0
 httpx >= 0.18
+kubernetes >= 17.17.0
 pendulum >= 2.1.2
 pydantic >= 1.8.2
 pyyaml >= 5.1b1
