Revert "Make docker build for testing"
This reverts commit 4043bddfcd74a2b7f165568c0e5893de79da6a2e.

--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -1,15 +1,15 @@
 name: Build Prefect Images
-on: [pull_request]
-    #  push:
-    #   tags:
-    #     - '*.*.*'
-    #   paths:
-    #     - 'Dockerfile'
-    #     - '.github/workflows/build_docker.yml'
-    #  pull_request:
-    #   paths:
-    #     - 'Dockerfile'
-    #     - '.github/workflows/build_docker.yml'
+on:
+  push:
+   tags:
+     - '*.*.*'
+   paths:
+     - 'Dockerfile'
+     - '.github/workflows/build_docker.yml'
+  pull_request:
+   paths:
+     - 'Dockerfile'
+     - '.github/workflows/build_docker.yml'
   workflow_dispatch:
 
 jobs:
