Set the baseUrl in orion-design's tsconfig
Fixes weird node module import errors when it would decide to import from orion-ui/node_modules rather than orion-design/node_modules

--- a/orion-ui/packages/orion-design/tsconfig.json
+++ b/orion-ui/packages/orion-design/tsconfig.json
@@ -9,5 +9,6 @@
         "declaration": true,
         "emitDeclarationOnly": true,
         "outFile": "dist/index.d.ts",
+        "baseUrl": "."
     }
 }
