Allow reuploading a version to test pypi

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -166,6 +166,7 @@ jobs:
       - name: Publish distribution 📦 to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
+          skip_existing: true
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
 
