--- a/orion-ui/packages/orion-design/tsconfig.json
+++ b/orion-ui/packages/orion-design/tsconfig.json
@@ -9,6 +9,11 @@
         "declaration": true,
         "emitDeclarationOnly": true,
         "outFile": "dist/index.d.ts",
-        "baseUrl": "."
+        "baseUrl": ".",
+        "paths": {
+          "@/*": [
+            "../../src/*"
+          ]
+        },
     }
 }
