--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pyyaml >= 5.1b1
 pytz >= 2021.1
 rich >= 10.0
 sqlalchemy[asyncio] >= 1.4.20
+toml >= 0.10.0
 python-slugify >= 5.0
 typer >= 0.4.0
 typing_extensions >= 3.10.0.1
