Add imports documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -160,7 +160,10 @@ nav:
                 - 'orion.utilities.schemas': api-ref/orion/utilities/schemas.md
                 - 'orion.utilities.server': api-ref/orion/utilities/server.md
         - Orion REST API: api-ref/rest-api.md
-    - Contributing: contributing/overview.md
+    - Contributing: 
+        - Overview: contributing/overview.md
+        - Imports: contributing/imports.md
+
 extra:
   analytics:
     provider: google
