Build UI and package it with our Docker image (PrefectHQ/orion#947)
Kubernetes developer experience improvements

- Build Orion UI with our Docker image
- Separate API and agent containers in k8s manifests
- Include a flow-runner role and role bindings in k8s manifests to fix Docker Desktop permissions issues
- Create the database in `prefect dev start` to match the behavior of `prefect orion start`

--- a/src/prefect/cli/templates/kubernetes-dev.yaml
+++ b/src/prefect/cli/templates/kubernetes-dev.yaml
@@ -20,7 +20,7 @@ spec:
             - -c
             - >-
               pip install -e /opt/prefect/repo\[dev\] &&
-              prefect dev start --no-ui
+              prefect dev start
           imagePullPolicy: "IfNotPresent"
           ports:
             - containerPort: 4200
@@ -48,3 +48,30 @@ spec:
       protocol: TCP
   selector:
     app: orion
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: default
+  name: flow-runner
+rules:
+- apiGroups: [""]
+  resources: ["pods", "pods/log"]
+  verbs: ["get", "watch", "list"]
+- apiGroups: ["batch"]
+  resources: ["jobs"]
+  verbs: [ "get", "list", "watch", "create", "update", "patch", "delete" ]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: flow-runner-role-binding
+  namespace: default
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: default
+roleRef:
+  kind: Role
+  name: flow-runner
+  apiGroup: rbac.authorization.k8s.io
