--- a/src/prefect/cli/templates/kubernetes.yaml
+++ b/src/prefect/cli/templates/kubernetes.yaml
@@ -13,12 +13,20 @@ spec:
         app: orion
     spec:
       containers:
-      - name: prefect
+      - name: api
         image: ${image_name}
-        command: ["prefect", "orion", "start", "--host", "0.0.0.0"]
+        command: ["prefect", "orion", "start", "--host", "0.0.0.0", "--no-agent", "--log-level", "DEBUG"]
         imagePullPolicy: "IfNotPresent"
         ports:
         - containerPort: 4200
+      - name: agent
+        image: ${image_name}
+        command: [ "prefect", "agent", "start"]
+        imagePullPolicy: "IfNotPresent"
+        env:
+          - name: PREFECT_ORION_HOST
+            value: http://orion:4200/api
+
 ---
 apiVersion: v1
 kind: Service
@@ -32,3 +40,31 @@ spec:
       protocol: TCP
   selector:
     app: orion
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: default
+  name: flow-runner
+rules:
+- apiGroups: [""]
+  resources: ["pods", "pods/log"]
+  verbs: ["get", "watch", "list"]
+- apiGroups: ["batch"]
+  resources: ["jobs"]
+  verbs: [ "get", "list", "watch", "create", "update", "patch", "delete" ]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: flow-runner-role-binding
+  namespace: default
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: default
+roleRef:
+  kind: Role
+  name: flow-runner
+  apiGroup: rbac.authorization.k8s.io
+
