Fixup UI test paths

--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     paths:
       - .github/workflows/ui-tests.yaml
-      - orion-ui/
+      - orion-ui/**
       - .nvmrc
   push:
     branches:
