Add pattern for loading CLI defaults from settings
Also, renames ORION_HOST to API_URL and adds utils to `Settings` to retrieve things by the envar key

--- a/src/prefect/cli/templates/kubernetes.yaml
+++ b/src/prefect/cli/templates/kubernetes.yaml
@@ -24,7 +24,7 @@ spec:
         command: [ "prefect", "agent", "start"]
         imagePullPolicy: "IfNotPresent"
         env:
-          - name: PREFECT_ORION_HOST
+          - name: PREFECT_API_URL
             value: http://orion:4200/api
 
 ---
