--- a/.github/workflows/nightly-release.yaml
+++ b/.github/workflows/nightly-release.yaml
@@ -18,18 +18,10 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Print all tags for debugging
-      run: |
-        git tag -l
-
     - name: Get latest tag
       id: get_latest_tag
       run: |
-        latest_tag=$(git tag -l | grep -E '^(3\.\d+\.\d+(?:[a-zA-Z0-9]+(?:\.[a-zA-Z0-9]+)*)?)$' | sort -V | tail -n 1)
-        echo "Fetched tags:"
-        git tag -l
-        echo "Filtered tags:"
-        git tag -l | grep -E '^(3\.\d+\.\d+(?:[a-zA-Z0-9]+(?:\.[a-zA-Z0-9]+)*)?)$'
+        latest_tag=$(git tag -l | grep -E '^3\.[0-9]+\.[0-9]+(rc[0-9]+)?$' | sort -V | tail -n 1)
         if [ -z "$latest_tag" ]; then
           echo "No matching tags found."
           exit 1
