--- a/.github/workflows/nightly-release.yaml
+++ b/.github/workflows/nightly-release.yaml
@@ -1,9 +1,5 @@
 name: Nightly Release Candidate
 
-permissions:
-  contents: write
-  pull-requests: read
-
 on:
   schedule:
     - cron: '0 8 * * *' # Run at midnight PST (08:00 UTC)
@@ -54,21 +50,14 @@ jobs:
         echo "next_tag=$next_tag" >> $GITHUB_ENV
         echo "Next tag is $next_tag"
 
-    - name: Generate release notes
-      id: generate_release_notes
-      if: env.SHOULD_CREATE_RELEASE == 'true'
-      uses: mikepenz/release-changelog-builder-action@v4
-      with:
-        fromTag: ${{ env.latest_tag }}
-
     - name: Create release
       id: create_release
       if: env.SHOULD_CREATE_RELEASE == 'true'
       uses: softprops/action-gh-release@v2
       with:
-        name: ${{ env.next_tag }}
-        release_name: "Nightly Release Candidate ${{ env.next_tag }}"
+        name: "Nightly Release Candidate ${{ env.next_tag }}"
         tag_name: ${{ env.next_tag }}
         draft: false
         prerelease: true
-        body: ${{ steps.generate_release_notes.outputs.changelog }}
+        generate_release_notes: true
+        token: ${{ secrets.PREFECT_CONTENTS_PR_RW }}
