--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ theme:
     custom_dir: docs/overrides
     favicon: img/favicon.png
     features:
+        - announce.dismiss
         - content.action.edit
         - content.code.copy
         - navigation.tabs.sticky
