--- a/.github/workflows/integration-package-tests.yaml
+++ b/.github/workflows/integration-package-tests.yaml
@@ -18,6 +18,13 @@ jobs:
     # These tests will only run if the integration paths are affected, or someone has
     # added the `integrations` label to the PR
     runs-on: ubuntu-latest
+    if: |
+      github.event_name == 'push' ||
+      github.event_name == 'pull_request' &&
+      (
+          github.event.pull_request.changed_files &&
+          contains(github.event.pull_request.changed_files, 'src/**/*.py')
+      ) && contains(github.event.pull_request.labels.*.name, 'test-all-integrations')
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
@@ -43,12 +50,7 @@ jobs:
           fi
           python scripts/generate_integration_package_tests_matrix.py "$COMMIT_RANGE" > matrix.json
           cat matrix.json
-          MATRIX=$(cat matrix.json)
-          if [[ "$MATRIX" == "[]" ]]; then
-            echo "matrix=''" >> $GITHUB_OUTPUT
-          else
-            echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
-          fi
+          echo "matrix=$(cat matrix.json)" >> $GITHUB_OUTPUT
 
   run-tests:
     timeout-minutes: 20
@@ -56,7 +58,6 @@ jobs:
     name: Run Tests for ${{ matrix.package }} on Python ${{ matrix.python-version }}
     needs: prepare-matrix
     runs-on: ubuntu-latest
-    if: ${{ needs.prepare-matrix.outputs.matrix != '' }}
     strategy:
       matrix: ${{fromJson(needs.prepare-matrix.outputs.matrix)}}
       fail-fast: false
