lots of vale changes

--- a/docs/.vale.ini
+++ b/docs/.vale.ini
@@ -5,8 +5,17 @@ MinAlertLevel = warning
 Packages = Google
 
 [*]
-BasedOnStyles = Vale, Google
+BasedOnStyles = Vale, Google, CustomStyles
 
-StylesPath = "styles"
+StylesPath = styles
+
+Vocab = prose
 
 Vale.Spelling = NO
+Google.Will = NO
+Google.We = NO
+Google.Quotes = NO
+Google.OptionalPlurals = NO
+
+[formats]
+mdx = md
